crates/interpreter/tests/snapshots/diagnostic_snapshots__b3_unknown_type_suggests_close_builtin.snap
---
source: crates/interpreter/tests/diagnostic_snapshots.rs
expression: "render_inside_main(\"  let n: numbre = 1;\")"
---
error: unknown type `numbre`
 --> test.subm:2:10
  |
1 | function main(): void {
2 |   let n: numbre = 1;
  |          ^^^^^^
3 | }
  |
help: did you mean `number`?
---
